refactor(architecture): CQRS 읽기 모델 분리, ScopedValue 기반 인증 전파 및 시간 의존성 주입 구조 개선