@@ -9,7 +9,7 @@ public record MessageContent(String value) {
     private static final int MAX_LENGTH = 5000;
 
     public MessageContent {
-        if (value == null || value.trim().isEmpty()) {
+        if (value == null || value.isBlank()) {
             throw new InvalidInputException("메시지 내용은 필수입니다");
         }
         if (value.length() > MAX_LENGTH) {
